--- a/docs/asciidocs/HowTo.adoc
+++ b/docs/asciidocs/HowTo.adoc
@@ -6,21 +6,29 @@ ifndef::imagesdir[:imagesdir: images]
 :icons: font
 :sectnums:    // Nummerierung der Überschriften / section numbering
 :toc: left
-////
-== Start the backend first
 
-* open a terminal in `backend`-project and execute:
+== Vorraussetzungen
 
-[source, shell]
+=== Technologien
+
+* Der Node-Package-Manager - npm muss installiert sein
+* Java muss installiert sein
+
+=== Hardware
+
+* Aktuell kann es noch zu Problemen bei Linus und Windows Geräten kommen
+* Es wird an einer Lösung mit Docker gearbeitet
+
+== Repository Klonen
+
+[source,shell]
 ----
-./mvnw clean quarkus:dev
+git clone https://github.com/htl-leonding-project/franklyn-quarkus
 ----
 
-////
+== Starten des Frontends
 
-== Start the frontend
-
-* open a terminal in `franklyn-frontend`-project and execute:
+* Öffnen Sie ein Terminalfenster im `franklyn-frontend`-Projektordner und führen Sie Folgendes aus:
 
 [source, shell]
 ----
@@ -28,10 +36,27 @@ npm i --force
 ng serve --open
 ----
 
+.Probleme aufgetreten?
+[%collapsible]
+====
+Falls es probleme gibt, kann es sein das Angular nicht installiert ist. In diesem Fall installieren sie einfach Angular.
+
+[source,bash]
+----
+npm install @angular/cli
+----
+====
+
 == Starten des Screenshot-Clients
 
-* download the `latest release jar` from the Releases
+* Laden Sie den das aktuellste *.jar* von unseren link:https://github.com/htl-leonding-project/franklyn-quarkus/releases[Releases] herunter
 
+.Ausführen des .jar Files
+[source,shell]
+----
+java -jar franklyn3-client-prealpha.jar
+----
 
+* In dem Ordner, wo Sie sich befinden sollten jetzt 2 Ordner mit alpha bzw. beta frames erscheinen.
 
 
