--- a/docs/asciidocs/states-goals/minutes-of-meeting.adoc
+++ b/docs/asciidocs/states-goals/minutes-of-meeting.adoc
@@ -7,5 +7,6 @@ ifndef::imagesdir[:imagesdir: images]
 :sectnums:    // Nummerierung der Überschriften / section numbering
 :toc: left
 
-include::states-goals/2023-09-15.adoc[]
+include::./2023-09-15.adoc[]
 
+include::./2023-09-22.adoc[]
