--- a/docs/asciidocs/technology-architecture/frame-types.adoc
+++ b/docs/asciidocs/technology-architecture/frame-types.adoc
@@ -23,13 +23,13 @@ ifndef::imagesdir[:imagesdir: images]
 - Alpha Frames
 - Beta Frames
 
-== Alpha Frames:
+== Alpha-Frames:
 
-Alpha Frames sind reine Screenshots, die auf dem Schüler-Client gespeichert werden. +
+Alpha-Frames sind reine Screenshots, die auf dem Schüler-Client gespeichert werden. +
 Sie werden später bei der Differenzenrechnung verwendet.
 
-== Beta Frames:
-Beta Frames sind Screenshots, die mit den Alpha Frames verglichen werden. Die Unterschiede werden in ein File (.png) kopiert und auf dem Schüler-Client gespeichert.
+== Beta-Frames:
+Beta-Frames sind Screenshots, die mit den Alpha Frames verglichen werden. Die Unterschiede werden in ein File (.png) kopiert und auf dem Schüler-Client gespeichert.
 
 == Live Bilder:
 
@@ -38,7 +38,7 @@ Live Bilder sind reine Screenshots, die zum Instructor Client während des Tests
 
 == Video Frames:
 
-Am Ende müssen die Alpha und die Beta Frames zusammengelegt werden. +
+Am Ende müssen die Alpha- und die Beta-Frames zusammengelegt werden. +
 Die zusammengelegten Frames werden später in der Erstellung von .mp4s verwendet.
 
 
@@ -48,17 +48,17 @@ Die zusammengelegten Frames werden später in der Erstellung von .mp4s verwendet
 
 - Am Anfang wird ein Screenshot aufgenommen, welcher als Alpha Frame bezeichnet wird.
 
-- Die nächsten Screenshots werden mit diesem Alpha Frame verglichen. Die Pixel von den Bildern werden miteinander verglichen. Für genauere Ergebnisse werden die Bilder in Graustufen umgewandelt.
+- Die nächsten Screenshots werden mit diesem Alpha-Frame verglichen. Die Pixel von den Bildern werden miteinander verglichen. Für genauere Ergebnisse werden die Bilder in Graustufen umgewandelt.
 
 - Die Differenzen werden auf einer Bitmap (Matrix oder Maske) gezeichnet.
 
 - Die Masken werden wieder in das RGB Farbformat umgewandelt und auf der Festplatte von dem Schüler-Client gespeichert.
 
-NOTE: Wenn der Prozentsatz der Differenzen über 30% liegt, wird der Alpha Frame aktualisiert
+NOTE: Wenn der Prozentsatz der Differenzen über 30% liegt, wird der Alpha-Frame aktualisiert
 
 
 
-== Wie werden die Alpha und Beta Frames zusammengelegt
+== Wie werden die Alpha- und Beta-Frames zusammengelegt
 
 - Das Programm ruft die letzten Alpha- und Beta-Frames ab.
 - Eine leere Matrix wird erstellt.
