docs(Slides): add latest slide

--- a/docs/asciidocs/states-goals/2023-09-22.adoc
+++ b/docs/asciidocs/states-goals/2023-09-22.adoc
@@ -35,3 +35,6 @@ plantuml::../plantuml/todoGantt-final.puml[]
 === Ziele:
 
 *bis xx.xx.202x:*
+
+Was machen wir bis zum Ende des Jahres?
+Übersichtlichen informative 
