--- a/docs/slides/index.adoc
+++ b/docs/slides/index.adoc
@@ -7,6 +7,13 @@ ifndef::imagesdir[:imagesdir: ../images]
 
 Ein Tool, welches Bilder am Schüler PC aufnimmt und dem Lehrer darstellt.
 
+== Problem bei Franklyn-2
+
+* Alle 3 Sekunden erhält der Lehrer ein Bild von jedem Schüler
+* Test (2h lang - ca. 30 Schüler - alle 3s ca. 1 MB großes Bild)
+** Datenmenge gesamt = 72 GB
+** Datenmenge pro s = 30MB
+
 == Wie funktioniert Franklyn?
 
 image::../images/slides-bg-title.jpg[background, size=cover]
