docs(slides): add slide

--- a/docs/slides/index.adoc
+++ b/docs/slides/index.adoc
@@ -3,6 +3,9 @@
 
 ifndef::imagesdir[:imagesdir: ../images]
 :icons: font
+:stylesheet: style.css
+:stylesdir: style
+
 image::../images/franklyn.png[background,size=cover]
 == Was ist Franklyn?
 
