docs(readme): insert gantt-charts

--- a/README.adoc
+++ b/README.adoc
@@ -2,9 +2,9 @@
 
 == Zeitplan
 
-plantuml:docs/asciidocs/plantuml/todoGantt-alpha.puml[]
-plantuml:docs/asciidocs/plantuml/todoGantt-beta.puml[]
-plantuml:docs/asciidocs/plantuml/todoGantt-final.puml[]
+plantuml::docs/asciidocs/plantuml/todoGantt-alpha.puml[]
+plantuml::docs/asciidocs/plantuml/todoGantt-beta.puml[]
+plantuml::docs/asciidocs/plantuml/todoGantt-final.puml[]
 
 == Neuimplementierung von Franklyn mit Quarkus
 
