--- a/README.adoc
+++ b/README.adoc
@@ -2,15 +2,15 @@
 
 == Zeitplan
 
-[plantuml]
+[plantuml, bar1, svg]
 =====
 include::docs/asciidocs/plantuml/todoGantt-alpha.puml[]
 =====
-[plantuml]
+[plantuml, bar2, svg]
 =====
 include::docs/asciidocs/plantuml/todoGantt-beta.puml[]
 =====
-[plantuml]
+[plantuml, bar3, svg]
 =====
 include::docs/asciidocs/plantuml/todoGantt-final.puml[]
 =====
