--- a/docs/asciidocs/technology-architecture/system-specification.adoc
+++ b/docs/asciidocs/technology-architecture/system-specification.adoc
@@ -2,7 +2,7 @@
 
 == architecture of the system
 
-image::../../images/slides-architektur-ziel.png[]
+image::../images/system-architecture.png[]
 
 == usecase diagram
 
