--- a/docs/asciidocs/technology-architecture/system-specification.adoc
+++ b/docs/asciidocs/technology-architecture/system-specification.adoc
@@ -1,4 +1,14 @@
 = System specification (Franklyn3 Relaunch)
+Franklyn 3 Dev-Team
+2023/24: franklyn-quarkus
+ifndef::imagesdir[:imagesdir: images]
+:sourcedir: ../src/main/java
+:icons: font
+:sectnums:    // Nummerierung der Überschriften / section numbering
+:toc: left
+
+
+
 
 == architecture of the system
 
