--- a/docs/asciidocs/technology-architecture/deployment-tutorial.adoc
+++ b/docs/asciidocs/technology-architecture/deployment-tutorial.adoc
@@ -75,7 +75,7 @@ NOTE: Schüler haben keinen Zugriff auf die Persistence Volumes von der Leocloud
 
 ---
 
-Grundsätzlich braucht für jede Komponente in unserem System ein Deployment
+Grundsätzlich braucht man für jede Komponente in unserem System ein Deployment und eine Service
 
 == Deployment von einer Postresql Datenbank
 
@@ -89,7 +89,7 @@ Folgender Befehl wurde verwendet, um ein Deployment für unsere Datenbank zu ers
 
 Wenn man jetzt `kubectl get pods` oder `kubectl get deployments` im Terminal eingibt, dann könnte man sehen, dass bei der Spalten `Ready` #0/1# dabei steht.
 Um das Problem zu finden, können wir folgendes machen.
-Wir kopieren uns den Namen des Pods in der Zwischen ablage und geben dann folgendes im Terminal ein
+Wir kopieren uns den Namen des Pods in der Zwischenablage und geben dann folgendes im Terminal ein
 
 ----
 kubectl log <Name des Pods> -c <Name des Images, welches von dem Pod verwendet wird>
@@ -117,11 +117,11 @@ Error: Database is uninitialized and superuser password is not specified.
 
 ----
 
-Für das Lösen dieses Problems müssen wir jetzt ein ConfigMap oder ein Secret erstellen, wo wir die benötigten Umgebungsvariablen definieren können.
+Für das Lösen dieses Problems müssen wir jetzt eine ConfigMap oder ein Secret erstellen, wo wir die benötigten Umgebungsvariablen definieren können.
 
 NOTE: `kubectl get deployments/postgres-demo -o yaml > deployment.yaml` im Terminal eingeben, damit man die ganze Konfiguration von dem Deployment in einem YAML File speichert.
 (Das könnte man auch bei Services, Secrets usw. auch machen ).
-Es lohnt sich auch, diesen Befehl nach jeder Änderung zu machen und die Files STÄNDIG zu kontrollieren.
+Es lohnt sich auch, diesen Befehl nach jeder Änderung zu machen und dann die Files STÄNDIG zu kontrollieren.
 
 === Erstellung von des Secrets
 
@@ -134,7 +134,7 @@ kubectl create secret generic  postgres-secret \
 --from-literal=POSTGRES_DB=<Name der DBs>
 ----
 
-NOTE: Die Argumente,welches nach `--from-literal` kommt, soll mit den Namen der benötigten Umgebenungsvariablen übereinstimmen.
+NOTE: Die Argumente,welche nach `--from-literal` kommen, sollen mit den Namen der benötigten Umgebenungsvariablen übereinstimmen.
 Das zweite Argument ist einfach der Wert dieser Umgebungsvariable.
 
 Jetzt kann man die Konfigurationen von unserem Secret mit der Verwendung von diesem Befehl in einem YAML File speichern
@@ -144,7 +144,7 @@ kubectl get secrets postgres-secret -o yaml > secret.yaml
 ----
 
 Wir sind aber noch immer nicht fertig mit dem Secret.
-Das Deployment soll sich die Werte von diesem Secret für seine Umgebungsvariablen lösen.
+Das Deployment soll sich die Werte von diesem Secret für seine Umgebungsvariablen holen.
 Dafür muss man folgendes im Terminal eingeben:
 
 ----
@@ -152,7 +152,7 @@ kubectl set env deployment/postgres-demo --from=secret/postgres-secret
 ----
 
 Unser Deployment soll jetzt problemlos funktionieren.
-Wenn das nicht der Fall ist könnte man folgendes machen (Nicht vergessen, YAML Files mit Hilfe der kubectl CLI zu generieren):
+Wenn das nicht der Fall ist, könnte man folgendes machen (Nicht vergessen, YAML Files mit Hilfe der kubectl CLI zu generieren):
 
 ----
 kubectl delete deployments/postgres-demo
@@ -162,7 +162,7 @@ kubectl apply -f postgres.yaml
 === Erstellung einer Service
 
 Wir haben die Datenbank jetzt zum Laufen gebracht.
-Damit wir auf diese zugreifen können müssen wir eine Service erstellen:
+Damit wir auf diese zugreifen können, müssen wir ein Service erstellen:
 
 ----
 kubectl expose deployments/postgres-demo --type=LoadBalancer --port=5432
@@ -179,8 +179,8 @@ die Minikube IP kann man mit dem Befehl `minikube ip` anzeigen lassen. beim Node
 
 == Persistence Volume/Persistence Volume Claim
 
-Bei der Leocloud sind diese schon definiert.
-Auf dem lokalen Minikube könnte man diese Konfiguration verwenden
+Bei der Leocloud sind diese schon vordefiniert.
+Auf dem lokalen Minikube könnte man folgende Konfiguration verwenden
 
 [source,yaml]
 ----
@@ -211,6 +211,10 @@ status:
 
 ----
 
+Wir brauchen noch ein PVC, damit unsere Anwendung auf die Datenbank zugreifen kann.
+
+Folgende Konfiguration kann dafür verwendet werden
+
 [source,yaml]
 ----
 apiVersion: v1
@@ -230,11 +234,9 @@ spec:
 
 ----
 
-Wir brauchen noch ein PVC, damit die Datenbank später ein SQL lesen und ausführen kann
 
-Folgende Konfiguration kann dafür verwendet werden
 
-Jetzt muss unser Deployment umkonfigurieren, sodass es dieses Volume verwendet.
+Jetzt müssen wir unser Deployment umkonfigurieren, sodass es dieses Volume verwendet.
 Leider können wir diese Konfigurationen nicht mit der Verwendung von der kubectl CLI hinzufügen.
 Deshalb habe ich sie in diesem Code-Snippet markiert.
 (Ich rate Ihnen, den Code nicht zu kopieren, sondern nur die Zeilen, die einen Plus enthalten, in ihrem Config Files händisch hinzufügen.
@@ -328,8 +330,8 @@ Vorgehensweise:
 
 1. Hochladen des Image auf ghcr.io oder andere Conatiner Registries
 2. Erstellung eines Deployments
-3. Erstellung einer Service
-4. Pfad im Ingress eintragen
+3. Erstellung eines Services
+4. Zugriffsroute in der Ingress.yml Datei definieren
 
 === Hochladen des Images auf ghcr.io
 
@@ -345,28 +347,25 @@ kubectl create deployment <beliebiger Namen> --image=<Name des Images, was sie b
 
 ----
 
-=== Pfad im Ingress eintragen
+
+=== Erstellung eines Services
+Gleich wie <<Erstellung einer Service>> allerdings müssen sie das richtige Deployment auswählen
+
+
+=== Zugriffsroute in der Ingress.yml Datei definieren
 
 <<Erstellung von Ingress>>
 
 == Deployment einer Angular Applikation
 
-Vorgehensweise:
+Vorgehensweise: gleich wie <<Deployment einer Java Applikation>>
 
-1. Hochladen des Image auf ghcr.io oder andere Conatiner Registries
-2. Erstellung eines Deployments
-3. Erstellung einer Service
-
-
-=== Hochladen des Images auf ghcr.io
-
-Siehe <<./how-to-upload-an-image-to-ghcr.adoc#, how to upload an image to ghcr - 2023/24>>
 
 == Erstellung von Ingress
 
-Damit man auf die deployten Komponenten mittels http und https brauchen kann, wird ein Ingress gebraucht.
+Damit man auf die deployten Komponenten mittels http und https von außen zugreifen kann, wird ein Ingress gebraucht.
 
-Wir müssen zuerst ein Reverse Proxy mittels nginx erstellen und dann die Routen für unsere Komopnenten definieiren
+Wir müssen zuerst ein Reverse Proxy mittels nginx erstellen und dann die Routen für unsere Komopnenten definieiren.
 
 === Erstellung von nginx Reverse Proxy
 
